[project]
name = "psg_station"
version = "1.0.8"
description = "Advanced Proxy Grabber & Speedtester"
authors = [
    { name = "yebekhe", email = "yebekhe@proton.me" }
]
dependencies = [
    "flet",
    "requests"
]
requires-python = ">=3.9"

[tool.flet]
org = "com.yebekhe"
product = "PSG Station"
company = "PSG Devs"
copyright = "Copyright (C) 2025 PSG"

[tool.flet.app]
path = "src"

[tool.flet.windows]

icon = "assets/icon.png"

[tool.flet.android.signing]
key_store = "upload-keystore.jks"
key_alias = "upload"




